<resources>
    <string name="app_name">PetHelp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_gallery">Lista de Animais</string>
    <string name="menu_slideshow">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_RG">RG</string>
    <string name="prompt_endereco">Endereço</string>
    <string name="prompt_telefone">Telefone</string>
    <string name="prompt_nome">Nome</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_cadrastro">CadrastroActivity</string>
    <string name="prompt_CPF">CPF</string>
    <string name="action_login">Logar</string>
    <string name="BTN_dispAnimal">Cadastrar Animal</string>
    <string name="BTN_AlterarDados">Alterar Dados</string>
    <string name="BTN_Exlcuir">Excluir</string>
    <string name="action_sign_in"></string>
    <string name="menu_funcionario">Funcionário</string>
</resources>